tests/baselines/reference/unmetTypeConstraintInImportCall.errors.txt
tests/cases/compiler/file2.ts(1,37): error TS2344: Type 'T' does not satisfy the constraint 'string'.


==== tests/cases/compiler/file1.ts (0 errors) ====
    export type Foo<T extends string> = { foo: T }
    
==== tests/cases/compiler/file2.ts (1 errors) ====
    type Bar<T> = import('./file1').Foo<T>;
                                        ~
!!! error TS2344: Type 'T' does not satisfy the constraint 'string'.
!!! related TS2208 tests/cases/compiler/file2.ts:1:10: This type parameter might need an `extends string` constraint.
    